# jinja_partials

./: .gitignore  CLAUDE.md  README.md  WARP.md  change-log.md  great-docs.yml  jinja-partials.code-workspace  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-development.piptools  requirements-development.txt  requirements.txt  ruff.toml  setup.py
.github/: FUNDING.yml
docs/: build-timings.json  changelog.html  changelog.md  index.html  license.html  llms-full.txt  llms.txt  robots.txt  search.json  sitemap.xml  skills.html
docs/.well-known/agent-skills/: index.json
docs/.well-known/skills/default/: SKILL.md
docs/reference/: PartialsException.html  PartialsException.md  PartialsJinjaExtension.html  PartialsJinjaExtension.md  generate_render_partial.html  generate_render_partial.md  index.html  index.md  register_environment.html  register_environment.md  register_extensions.html  register_extensions.md  register_fastapi_extensions.html  register_fastapi_extensions.md  register_quart_extensions.html  register_quart_extensions.md  register_starlette_extensions.html  register_starlette_extensions.md  render_partial.html  render_partial.md
example/: app.py
example/models/: video_model.py
example/services/: video_service.py
example/static/css/: site.css
example/templates/home/: index.html  listing.html
example/templates/shared/partials/: partial_video_square.html
example/views/: home.py
examples/example_fastapi/: app.py  requirements.piptools  requirements.txt
examples/example_fastapi/templates/home/: index.html
examples/example_flask/: app.py  example_use_jinja_partials.py  requirements.txt
examples/example_flask/models/: category_model.py
examples/example_flask/services/: video_service.py
examples/example_flask/templates/home/: index.html
examples/example_flask/views/: home.py
examples/example_quart/: app.py  requirements.piptools  requirements.txt
examples/example_quart/templates/home/: index.html
examples/example_starlette/: app.py  requirements.piptools  requirements.txt
examples/example_starlette/templates/home/: index.html
jinja_partials/: __init__.py
scripts/: build_docs.py  fix_readme_code_comments.py  postprocess_site.py  serve_docs.py
tests/: conftest.py  fixtures.py  test_rendering.py  test_template.py
tests/test_templates/render/: recursive.html
(+3 files in other folders)
