[project]
name = "jinja_partials"
description = "Simple reuse of partial HTML page templates in the Jinja template language for Python web frameworks."
readme = "./README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "web",
    "html",
    "templates",
    "jinja",
    "jinja2",
    "partials",
    "htmx",
    "components",
    "fragments",
    "flask",
    "quart",
    "fastapi",
    "starlette",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Typing :: Typed',
]
dependencies = [
    "jinja2",
]
version = "0.3.2"

[project.optional-dependencies]
dev = [
    "pytest",
    "great-docs",
]


[project.urls]
Homepage = "https://github.com/mikeckennedy/jinja_partials"
Documentation = "https://mkennedy.codes/docs/jinja-partials/"
Tracker = "https://github.com/mikeckennedy/jinja_partials/issues"
Source = "https://github.com/mikeckennedy/jinja_partials"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.ruff_cache",
    "/.idea",
    "/.claude",
    "/.cursor",
    "/.vscode",
    "/.pytest_cache",
    "/.github",
    "/ruff.toml",
    "/pyrefly.toml",
    "/WARP.md",
    "/tests",
    "/example",
    "/examples",
    "/docs",
    "/scripts",
    "/great-docs.yml",
    "/jinja-partials.code-workspace",
    "requirements-development.piptools",
    "requirements-development.txt",
    "requirements.piptools",
    "tox.ini",
    "ruff.toml",
    ".gitignore",
    "/example_client",
    "/build",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["jinja_partials"]
exclude = [

    "/.github",
    "/tests",
    "/example",
    "tox.ini",
    "ruff.toml",
    ".gitignore",
    "/example_client",
    "/build",
    "/dist",
]